# fasterrcnn-pytorch-training-pipeline

./: .gitignore  .gitmodules  LICENSE  README.md  app.py  coco2pascal.py  config.py  custom_utils.py  datasets.py  eval.py  export.py  inference.py  inference_video.py  model.py  new_train.py  onnx-inference-cam.py  onnx_inference_image.py  onnx_inference_video.py  requirements.txt  requirements_blackwell.txt  sahi_inference.py  setup.cfg  setup.py  train.py  validate.py  ~Desktop
data/: README.md
data_configs/: aquarium.yaml  aquarium_yolo.yaml  coco.yaml  coco128.yaml  custom_data.yaml  gtsdb.yaml  smoke.yaml  test_image_config.yaml  test_video_config.yaml  trash_icra.yaml  voc.yaml
docs/: upcoming_updates.md  updates.md
example_test_data/: README.md
models/: __init__.py  create_fasterrcnn_model.py  fasterrcnn_convnext_small.py  fasterrcnn_convnext_tiny.py  fasterrcnn_custom_resnet.py  fasterrcnn_darknet.py  fasterrcnn_dinov3_convnext_base.py  fasterrcnn_dinov3_convnext_large.py  fasterrcnn_dinov3_convnext_small.py  fasterrcnn_dinov3_convnext_tiny.py  fasterrcnn_dinov3_convnext_tiny_multifeat.py  fasterrcnn_dinov3_vitb16.py  fasterrcnn_dinov3_vith16plus.py  fasterrcnn_dinov3_vitl16.py  fasterrcnn_dinov3_vits16.py  fasterrcnn_dinov3_vits16plus.py  fasterrcnn_efficientnet_b0.py  fasterrcnn_efficientnet_b4.py  fasterrcnn_mbv3_large.py  fasterrcnn_mbv3_small_nano_head.py  fasterrcnn_mini_darknet.py  fasterrcnn_mini_darknet_mini_head.py  fasterrcnn_mini_darknet_nano_head.py  fasterrcnn_mini_darknet_tiny_head.py  fasterrcnn_mini_squeezenet1_1_mini_head.py  (+26 more)
(+13 files in other folders)
