[metadata]
name = fasterrcnn-pytorch-training-pipeline
version = 0.1.0
author = Sovit Ranjan Rath
author_email = sovitrath5@gmail.com
description = A Simple Pipeline to Train PyTorch FasterRCNN Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sovit-123/fasterrcnn-pytorch-training-pipeline.git
license = MIT

[options]
packages = find:
 
